--- a/composer.json
+++ b/composer.json
@@ -39,7 +39,8 @@
         "slim/http-cache": "^0.3.0",
         "slim/flash": "^0.1.0",
 	"siriusphp/validation": "1.2.*",
-        "facebook/graph-sdk": "^5.4"
+        "facebook/graph-sdk": "^5.4",
+        "akrabat/rka-ip-address-middleware": "^0.5.0"
     },
     "require-dev": {
     	"phpunit/phpunit": "5.5.*"
